# src/main/Main.kt
@@ -6,54 +6,80 @@ import com.neelkamath.kwikipedia.getPage
 import com.neelkamath.kwikipedia.getUrl
 import com.neelkamath.kwikipedia.search
 import io.ktor.application.Application
-import io.ktor.application.ApplicationCall
 import io.ktor.application.call
 import io.ktor.application.install
 import io.ktor.features.CallLogging
 import io.ktor.features.ContentNegotiation
 import io.ktor.gson.gson
+import io.ktor.http.HttpStatusCode
 import io.ktor.request.receive
 import io.ktor.response.respond
 import io.ktor.routing.Routing
 import io.ktor.routing.get
 import io.ktor.routing.post
-import io.ktor.util.pipeline.PipelineContext
 
 fun Application.main() {
     install(CallLogging)
     install(ContentNegotiation) { gson() }
     install(Routing) {
-        get("health_check") { call.respond("OK") }
         get("search") {
             val results = search(call.request.queryParameters["query"]!!).toList()
             call.respond(SearchResponse(results.map { Topic(it.title, it.description) }))
         }
-        post("quiz") { postQuiz(this) }
+        post("quiz") {
+            val request = call.receive<QuizRequest>()
+            if (request.topic != null && request.text != null) {
+                call.respond(HttpStatusCode.BadRequest, QuizRequest.invalidMessage)
+            } else {
+                call.respond(if (request.text != null) quizText(request) else quizTopic(request))
+            }
+        }
+        get("health_check") { call.respond("OK") }
     }
 }
 
-/** Handles an HTTP POST request with a [context] to the `/quiz` endpoint. */
-private suspend fun postQuiz(context: PipelineContext<Unit, ApplicationCall>) = with(context) {
-    val (topic, configuration, max) = call.receive<QuizRequest>()
+/** Creates a quiz for a [QuizRequest.topic]. If the [QuizRequest.topic] is `null`, a random topic will be chosen. */
+private suspend fun quizTopic(request: QuizRequest): QuizResponse {
+    val topic = request.topic ?: search()[0].title
     val page = getPage(topic)
     val documents = page
         .filterKeys { it !in listOf("See also", "References", "Further reading", "External links") }
-        .map { tokenize(it.value) }
-    val processedSentences = configuration.types.flatMap { findNames(documents, it) }.let { sentences ->
-        if (configuration.duplicates.duplicateSentences) return@let sentences
-        sentences.fold(mutableListOf<ProcessedSentence>()) { list, processed ->
-            if (processed.context.sentence !in list.map { it.context.sentence }) list.add(processed)
-            list
-        }
-    }
-    call.respond(
-        QuizResponse(
-            QuizMetadata(topic, getUrl(topic)),
-            generateQuestions(processedSentences, configuration).let { if (max == null) it else it.take(max) },
-            page["See also"]?.split("\n")
-        )
+        .values
+    val processedSentences = processSentences(documents.toList(), request.configuration)
+    return QuizResponse(
+        assembleQuestions(processedSentences, request.configuration, request.max),
+        QuizMetadata(topic, getUrl(topic)),
+        page["See also"]?.split("\n")
     )
 }
+
+/** Creates a [QuizResponse] for a non-null [QuizRequest.text]. */
+private fun quizText(request: QuizRequest): QuizResponse = with(request) {
+    val processedSentences = processSentences(text!!, configuration)
+    QuizResponse(assembleQuestions(processedSentences, configuration, max))
+}
+
+/** Processes [sections] of text (e.g., a section on the early life of Bill Gates) according to the [configuration]. */
+private fun processSentences(sections: List<String>, configuration: QuizConfiguration): List<ProcessedSentence> =
+    configuration.types
+        .flatMap { entity ->
+            findNames(sections.map { tokenize(it) }, entity)
+        }
+        .let { if (configuration.duplicates.duplicateSentences) it else filterSentences(it) }
+
+/** Assembles [QuizQuestion]s from [sentences] according to the [config]. */
+private fun assembleQuestions(
+    sentences: List<ProcessedSentence>,
+    config: QuizConfiguration,
+    max: Int?
+): List<QuizQuestion> = generateQuestions(sentences, config).let { if (max == null) it else it.take(max) }
+
+/** Filters unique [sentences] by their [ProcessedContext.sentence]s. */
+private fun filterSentences(sentences: List<ProcessedSentence>): List<ProcessedSentence> =
+    sentences.fold(mutableListOf()) { list, processed ->
+        if (processed.context.sentence !in list.map { it.context.sentence }) list.add(processed)
+        list
+    }
 
 /** Generates [QuizQuestion]s from [sentences] as stated in the [configuration]. */
 internal fun generateQuestions(
